# sbv2-onnx-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.cuda.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: bundle_ort_libs.sh
src/: config.rs  constants.rs  errors.rs  inference.rs  main.rs  server.rs
src/audio/: mod.rs
src/model/: mod.rs
src/nlp/: bert.rs  mod.rs
src/nlp/chinese/: cn2an.rs  g2p.rs  mod.rs  normalizer.rs  tone_sandhi.rs
src/nlp/english/: mod.rs
src/templates/: index.html
