[package]
name = "sbv2_onnx_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
base64 = "0.22.1"
clap = { version = "4.5.51", features = ["derive"] }
hound = "3.5.1"
jieba-rs = "0.8.1"
pinyin = { version = "0.10.0", features = ["compat", "plain", "with_tone", "with_tone_num", "with_tone_num_end"] }
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
once_cell = "1.21.3"
ort = { version = "1.16.3", features = ["download-binaries", "copy-dylibs", "half" ] }
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
serde_with = "3.15.1"
thiserror = "2.0.17"
tokenizers = { version = "0.22.1", features = ["onig"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = "1.18.1"

[features]
cuda = ["ort/cuda"]
coreml = ["ort/coreml"]
rocm = ["ort/rocm"]
